--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,8 @@ captures/
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
-# Comment next line if keeping position of elements in Navigation Editor is relevant for you
+.idea/deploymentTargetDropDown.xml
+.idea/misc.xml
 .idea/navEditor.xml
 
 # Keystore files
