--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,7 +36,11 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+         java-version: '11'
+         distribution: 'temurin'
+         cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Run Tests
         run: bash ./gradlew test --stacktrace  
   apk:
@@ -49,7 +53,13 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+         java-version: '11'
+         distribution: 'temurin'
+         cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Run Tests
+        run: bash ./gradlew test --stacktrace  
       - name: Build APK
         run: bash ./gradlew assembleDebug --stacktrace
       - name: Upload APK
