--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ captures/
 .idea/deploymentTargetDropDown.xml
 .idea/misc.xml
 .idea/navEditor.xml
+/.idea/sonarlint/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -84,3 +85,4 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
