--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "fr.exaltit.fizz_buzz"
         minSdk 21
         targetSdk 32
-        versionCode 1
-        versionName "1.1"
+        versionCode project.versionCode
+        versionName project.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
